2004-02-18  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #54512

	* libsoup/soup-soap-response.c (soup_soap_parameter_get_int_value):
	don't leak the value returned from xmlNodeGetContent().
	(soup_soap_parameter_get_string_value,
	soup_soap_parameter_get_property): return a g_strdup'ed
	string, not the value returned by xmlNodeGetContent, so that
	callers can use g_free, and not xmlFree.

	* libsoup/soup-soap-response.h: made soup_parameter_get_property
	not return const.

2004-02-17  Dan Winship  <danw@ximian.com>

	* libsoup/soup-soap-message.h (SOUP_IS_SOAP_MESSAGE_CLASS): Fix a
	typo. #54433, from Mariano Suarez-Alvarez.

	* libsoup/soup-soap-response.h (SOUP_IS_SOAP_RESPONSE_CLASS):
	Likewise

2004-02-17  Rodney Dawes  <dobey@ximian.com>

	* libsoup/soup-message.c (soup_message_new): HTTP connections require
	a hostname, and we also hash on the host for message queueing in the
	session, if the host is NULL we free the SoupUri and return NULL

2004-02-14  Dan Winship  <danw@ximian.com>

	* configure.in: Use POSIX-compliant "test $foo = bar", rather than
	GNU-only "test $foo == bar". #54354, from Julio M. Merino Vidal.

2004-02-12  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-dns.c (check_hostent): Call read() in a do-while
	loop to prevent DNS errors from short reads.

2004-02-11  Joe Shaw  <joe@ximian.com>

	* configure.in: Bumped version number to 2.1.7 and libtool
	current. 

2004-02-11  Dan Winship  <danw@ximian.com>

	* libsoup/soup-connection.c (soup_connection_disconnect): Update
	Joe's comment here with a gory explanation of exactly what's going
	on. (It's not just an SSL bug either, it affects all connections.)

2004-02-10  Joe Shaw  <joe@ximian.com>

	* libsoup/soup-connection.c (soup_connection_disconnect): Add a
	workaround for SSL connections which time-out but don't close the
	socket until we try sending data again later.

	* libsoup/soup-socket.c (soup_socket_connect, soup_socket_listen):